# project-aigis

./: .gitignore  main.py  package.json  pyproject.toml  requirements.txt  services.py  slack-connector.py  tsconfig.json
aigis/: agent.py  tools.py
src/: index.ts
